<resources>
    <string name="app_name">Victor_Friends</string>
    <string name="r_name">Name</string>
    <string name="hint_name">Enter Name</string>
    <string name="r_email">Email</string>
    <string name="hint_email">Enter Email</string>
    <string name="r_phone">Phone Number</string>
    <string name="hint_phone">Enter Phone Number</string>
    <string name="r_address">Address</string>
    <string name="hint_address">Enter Address</string>
    <string name="r_add_friend">ADD FRIEND</string>
    <string name="title_activity_maps">Map</string>
</resources>